exports[`Config -> config get returns the merged _defaults and _config 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {
    "X-ACCESS-TOKE": "aasdljhf2kjrasdf2l3jrhn2",
  },
  "mode": "cors",
}
`;

exports[`Config -> config merge does not mutate _config or _defaults 1`] = `
Object {
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "mode": "cors",
}
`;

exports[`Config -> config merge merges all the params passed 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "mode": "no-cors",
}
`;

exports[`Config -> config merge returns body stringified according to Content-Type 1`] = `
Object {
  "body": Object {
    "foo": "bar",
  },
  "headers": Object {},
}
`;

exports[`Config -> config merge returns the config merged with the params 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {},
  "mode": "no-cors",
}
`;

exports[`Config -> config merge returns the config merged with the params 2`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {},
  "mode": "no-cors",
}
`;

exports[`Config -> config set merges the provided config with this._config 1`] = `
Object {
  "credentials": "same-origin",
  "headers": Object {
    "X-ACCESS-TOKEN": "aasdljhf2kjrasdf2l3jrhn2",
  },
  "mode": "cors",
}
`;
